--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,7 +8,7 @@ development:
 
 template:
   bootstrap: 5
-  bootswatch: lumen # litera lumen spacelab
+  bootswatch: litera # spacelab
 
 toc:
   depth: 3
