--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,10 +59,14 @@ export(eth_1)
 export(eth_2)
 export(eth_3)
 export(example)
-export(fu_0)
+export(fu_0_2023)
 export(fu_1)
+export(fu_1_2023)
 export(fu_2)
+export(fu_2_2023)
 export(fu_3)
+export(fu_3_2023)
+export(fu_4)
 export(galway_1)
 export(galway_2)
 export(glasgow_1)
