--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,15 +1,15 @@
-## _pkgdown.yml unicol | 2024 05 03
+## _pkgdown.yml unicol | 2025 09 02
 ## --------------------------------
 
 url: https://hneth.github.io/unicol/
 
 development:
-  mode: devel # devel OR release
+  mode: release # devel OR release
 
 template:
   bootstrap: 5
-  # bootswatch: litera # release
-  bootswatch: spacelab # devel
+  bootswatch: litera # release
+  # bootswatch: spacelab # devel
 
 toc:
   depth: 3
