--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,10 +1,10 @@
-## _pkgdown.yml unicol | 2025 09 03
+## _pkgdown.yml unicol | 2025 09 02
 ## --------------------------------
 
 url: https://hneth.github.io/unicol/
 
 development:
-  mode: devel # devel OR release
+  mode: release # devel OR release
 
 template:
   bootstrap: 5
