--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: unicol
 Type: Package
 Title: The Colors of your University
 Version: 0.4.0.9001
-Date: 2025-09-03
+Date: 2025-09-16
 Authors@R: c(person("Hansjoerg", "Neth", role = c("aut", "cre"), email = "h.neth@uni.kn", comment = c(ORCID = "0000-0001-5427-3141")), 
              person("Constantin", "Basler", role = "ctb"),
              person("Paula", "Bauer", role = "ctb"),
@@ -30,7 +30,8 @@ Suggests:
     rmarkdown,
     spelling
 Encoding: UTF-8
-License: CC BY-SA 4.0 
+License: CC BY-SA 4.0
+DOI: 10.5281/zenodo.8252106
 URL: https://github.com/hneth/unicol/, https://hneth.github.io/unicol/
 BugReports: https://github.com/hneth/unicol/issues
 VignetteBuilder: knitr
